--- a/src/app/components/button-link/button-link.component.html
+++ b/src/app/components/button-link/button-link.component.html
@@ -1,1 +1,15 @@
-<p>button-link works!</p>
+<!-- LINK -->
+<div *ngIf="variant === ''" class="link">
+  <a routerLink="{{ routerLink }}">{{ text }}</a>
+</div>
+
+<!-- BUTTON -->
+<button *ngIf="variant !== ''" type="{{ type }}" class="{{ variant }} button">
+  {{ text }}
+  <app-svg
+    title="{{ svgTitle }}"
+    variant="{{ svgVariant }}"
+    width="{{ svgWidth }}"
+    fill="{{ svgFill }}"
+  ></app-svg>
+</button>
