added first stylings

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,19 @@
+<!-- link variant (no variant) -->
 <bl text="This is a Link"></bl>
+
+<!-- button variants(default: type:button) - variants declared in scss) -->
 <bl variant="text" type="button" text="This is Button with Text"></bl>
-<bl variant="contained" type="button" text="Text with SVG before"></bl>
-<bl variant="contained" type="button" text="Text SVG after"></bl>
+<bl
+  variant="contained"
+  svgVariant="save"
+  svgWidth="20px"
+  svgFill="black"
+  text="Text with SVG"
+></bl>
+<bl
+  variant="save"
+  type="submit"
+  svgVariant="save"
+  svgWidth="20px"
+  svgFill="black"
+></bl>
