--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,19 @@
-/* You can add global styles to this file, and also import other style files */
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+body {
+  display: grid;
+  place-items: center;
+  margin-top: 30vh;
+}
+
+app-root {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+}
